# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
-import { Router, type IRouter } from "express";
-import healthRouter from "./health";
+import { Router } from "express";
+import healthRouter from "./health.js";
+import authRouter from "./auth.js";
+import generalRouter from "./general.js";
+import friendsRouter from "./friends.js";
 
-const router: IRouter = Router();
+const router = Router();
 
-router.use(healthRouter);
+router.use("/healthz", healthRouter);
+router.use("/auth", authRouter);
+router.use("/general", generalRouter);
+router.use("/friends", friendsRouter);
 
 export default router;
